[package]
name = "sled-overlay"
version = "0.1.2"
description = "Overlay mechanism for sled"
repository = "https://github.com/parazyd/sled-overlay"
authors = ["Dyne.org foundation <foundation@dyne.org>"]
license = "AGPL-3.0-only"
edition = "2021"

[dependencies]
sled = "0.34.7"

# DarkFi serialization library
darkfi-serial = {git = "https://codeberg.org/darkrenaissance/darkfi", optional = true}

[dev-dependencies]
# To execute async tests
smol = "2.0.0"

[features]
default = []
async-serial = ["darkfi-serial/async"]
serial = ["darkfi-serial"]
