[package]
name = "sled-overlay"
version = "0.1.9"
description = "Overlay mechanism for sled"
repository = "https://github.com/parazyd/sled-overlay"
authors = ["Dyne.org foundation <foundation@dyne.org>"]
license = "AGPL-3.0-only"
edition = "2021"

[dependencies]
sled = "0.34"

# DarkFi serialization library
darkfi-serial = {version = "0.5", optional = true}

[dev-dependencies]
# To execute async tests
smol = "2"

[features]
default = []
async-serial = ["serial", "darkfi-serial/async"]
serial = ["darkfi-serial"]
